--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -8,6 +8,8 @@
 @import "wild-west.scss";
 @import "health-defender.scss";
 @import "tanks.scss";
+@import "sci-fi.scss";
+@import "other.scss";
 @import "media.scss";
 
 body {
