finished with all main sections

--- a/src/assets/css/about-me.scss
+++ b/src/assets/css/about-me.scss
@@ -1,21 +1,26 @@
 @import "colors.scss";
 .about-me {
-  background: url("../images/bg-about-me.jpg") no-repeat;
+  background: #323745;
   background-size: cover;
   border: solid $green-main;
   border-width: 4px 0 4px 0;
-
+  color: $white-main;
   &__grid-wrap {
     display: grid;
-    grid-template-columns: 1fr 3fr 1.5fr;
+    grid-template-columns: 150px 1fr 150px;
+    grid-column-gap: 20px;
     padding: 20px;
   }
+
   img {
-    width: 170px;
+    width: 100%;
+    max-width: 120px;
     margin-bottom: 50px;
   }
   &__about {
-
+    img {
+      max-width: 100%;
+    }
     &__title {
       font-size: 50px;
       font-family: 'Sigmar', sans-serif;
@@ -28,36 +33,8 @@
   }
 
   &__contacts {
-    font-family: 'Burbank', sans-serif;
-    columns: $green-darker;
-    &__lang {
-      border-bottom: 10px $green-main solid;
-      margin-bottom: 30px;
-      color: $green-darker;
-      .word {
-        font-size: 35px;
-      }
-      .desc {
-        font-size: 20px;
-        margin-left: 5px;
-      }
-      .value {
-        font-size: 40px;
-        line-height: 36px;
-        float: right;
+      img {
+        max-width: 100px;
       }
     }
-    &__info {
-      font-family: 'Sigmar', sans-serif;
-      font-size: 30px;
-      line-height: 31px;
-      &-title {
-        color: $green-lighter;
-      }
-      &-value {
-        color: $green-dark;
-        margin-bottom: 20px;
-      }
-    }
-  }
 }
