--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -49,3 +49,10 @@ ul {
   padding: 0 10px;
 }
 
+footer {
+  margin-top: 100px;
+  font-family: 'Sigmar', sans-serif;
+  color: $white-main;
+  font-size: 30px;
+  border-bottom: 20px solid $green-main;
+}
