--- a/src/assets/css/about-me.css
+++ b/src/assets/css/about-me.css
@@ -1,43 +1,25 @@
 .about-me {
-  background: url("../images/bg-about-me.jpg") no-repeat;
+  background: #323745;
   background-size: cover;
   border: solid #76a10f;
-  border-width: 4px 0 4px 0; }
+  border-width: 4px 0 4px 0;
+  color: #EEF6F2; }
   .about-me__grid-wrap {
     display: grid;
-    grid-template-columns: 1fr 3fr 1.5fr;
+    grid-template-columns: 150px 1fr 150px;
+    grid-column-gap: 20px;
     padding: 20px; }
   .about-me img {
-    width: 170px;
+    width: 100%;
+    max-width: 120px;
     margin-bottom: 50px; }
+  .about-me__about img {
+    max-width: 100%; }
   .about-me__about__title {
     font-size: 50px;
     font-family: 'Sigmar', sans-serif; }
   .about-me__about__desc {
     font-size: 24px;
     margin-bottom: 20px; }
-  .about-me__contacts {
-    font-family: 'Burbank', sans-serif;
-    columns: #4c6333; }
-    .about-me__contacts__lang {
-      border-bottom: 10px #76a10f solid;
-      margin-bottom: 30px;
-      color: #4c6333; }
-      .about-me__contacts__lang .word {
-        font-size: 35px; }
-      .about-me__contacts__lang .desc {
-        font-size: 20px;
-        margin-left: 5px; }
-      .about-me__contacts__lang .value {
-        font-size: 40px;
-        line-height: 36px;
-        float: right; }
-    .about-me__contacts__info {
-      font-family: 'Sigmar', sans-serif;
-      font-size: 30px;
-      line-height: 31px; }
-      .about-me__contacts__info-title {
-        color: #87b158; }
-      .about-me__contacts__info-value {
-        color: #2f3e1f;
-        margin-bottom: 20px; }
+  .about-me__contacts img {
+    max-width: 100px; }
