--- a/src/assets/css/media.css
+++ b/src/assets/css/media.css
@@ -22,31 +22,45 @@
     padding: 10px; }
   .west-set .title {
     font-size: 35px; }
-  .about-me {
-    background-repeat: round; }
-    .about-me__grid-wrap {
-      grid-template-columns: auto; }
-      .about-me__grid-wrap img {
-        width: 170px;
-        margin: 0 0 0 50px; }
-    .about-me__exp {
-      text-align: center; }
-    .about-me__contacts__info {
-      font-size: 25px; }
-      .about-me__contacts__info-title {
-        color: #4c6333; }
-    .about-me__contacts__lang .word {
-      font-size: 50px; }
-    .about-me__contacts__lang .desc {
-      font-size: 30px; }
-    .about-me__contacts__lang .value {
-      font-size: 60px;
-      line-height: 47px; }
   .works__fantasy__title {
     font-size: 40px;
     padding: 30px 0; } }
 
 @media screen and (max-width: 700px) {
+  .about-me__grid-wrap {
+    grid-template-columns: auto; }
+  .about-me__contacts, .about-me__exp {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: center; }
+  .freelance__title {
+    font-size: 30px; }
+  .moon__title {
+    font-size: 30px; }
+  .moon__sub-title {
+    font-size: 20px; }
+  .punk {
+    background: url("../images/works/punk-set/bg.jpg") no-repeat;
+    background-size: cover;
+    font-family: 'Sigmar', sans-serif;
+    padding-bottom: 100px; }
+    .punk__sub-title {
+      font-size: 25px; }
+    .punk__title {
+      padding: 20px 0;
+      font-size: 25px;
+      text-align: center;
+      color: #EEF6F2; }
+    .punk__wrap {
+      padding: 0 0 30px;
+      background: #939393; }
+    .punk__unit_big {
+      text-align: center;
+      padding: 20px;
+      background: #7e857e; }
+    .punk .flex-container img {
+      width: 49%; }
   .mobNewLine {
     display: block; }
   .work-plan__title {
@@ -137,19 +151,14 @@
     margin: 0 0 0 10px; }
     header .name .name_and_prof .fullName {
       font-size: 36px; }
-  .about-me {
-    background-repeat: round; }
-    .about-me__grid-wrap {
-      grid-template-columns: auto; }
-    .about-me img {
-      width: 120px;
-      margin: 0 10px; }
-    .about-me__contacts__lang .word {
-      display: block; }
-    .about-me__contacts__lang .value {
-      float: none;
-      margin-left: 30px;
-      font-size: 40px; }
+  .about-me__about__title {
+    font-size: 45px; }
+  .about-me__exp img {
+    width: 100%;
+    max-width: 100px;
+    margin-bottom: 20px; }
+  .about-me__contacts img {
+    max-width: 60px; }
   .works__fantasy__title {
     font-size: 27px;
     padding: 20px 0; }
