--- a/src/assets/css/other.scss
+++ b/src/assets/css/other.scss
@@ -47,3 +47,101 @@
     width: 49%;
   }
 }
+
+.punk {
+  background: url("../images/works/punk-set/bg.jpg") no-repeat;
+  background-size: cover;
+  font-family: 'Sigmar', sans-serif;
+  padding-bottom: 100px;
+  &__sub-title {
+    font-size: 25px;
+  }
+
+  &__title {
+    padding: 20px 0;
+    font-size: 45px;
+    text-align: center;
+    color: $white-main;
+  }
+
+  &__wrap {
+    padding: 0 0 30px;
+    background: #939393;
+  }
+
+  &__unit_big {
+    text-align: center;
+    padding: 20px;
+    background: #7e857e;
+
+    img {
+      max-width: 100%;
+    }
+  }
+
+  .flex-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: flex-start;
+
+    img {
+      width: 24%;
+    }
+  }
+}
+
+.moon {
+  border-bottom: 10px solid $green-main;
+  &__title-wrap {
+    background: url("../images/works/moon/bg.jpg") no-repeat;
+    background-size: cover;
+    font-family: 'Sigmar', sans-serif;
+    color: $white-main;
+    text-align: center;
+    padding: 20px 0;
+  }
+  &__title {
+    font-size: 50px;
+  }
+  &__sub-title {
+    font-size: 25px;
+  }
+  img {
+    width: 100%;
+  }
+}
+
+.freelance {
+  &__title {
+    font-size: 50px;
+    font-family: 'Sigmar', sans-serif;
+    text-align: center;
+    color: $white-main;
+    padding: 20px 0;
+  }
+  &__wrap {
+    background: $white-main;
+  }
+
+  .flex-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    background: white;
+  }
+  img {
+    width: 100%;
+
+    &.doctor {
+      grid-column-start: 3;
+      grid-row-start: 1;
+      grid-row-end: span 2;
+      align-self: center;
+    }
+    &.last {
+      grid-column-start: 1;
+      grid-column-end: 4;
+    }
+  }
+
+}
