--- a/src/assets/css/work-plan.scss
+++ b/src/assets/css/work-plan.scss
@@ -1,10 +1,12 @@
 @import "colors.scss";
 
 .work-plan {
-  background: $green-pale;
+  background: url("../images/plan-bg.jpg") no-repeat;
+  background-size: cover;
   padding: 30px 0 70px;
   border: solid $green-main;
   border-width: 5px 0;
+  color: $white-main;
 
   &__title {
     font-family: 'Sigmar', sans-serif;
