starting with carousel

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -11,6 +11,8 @@
 @import "sci-fi.scss";
 @import "other.scss";
 @import "media.scss";
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
 
 body {
   background-color: #282c34;
