starting with carousel

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -58,3 +58,8 @@ footer {
   font-size: 30px;
   border-bottom: 20px solid $green-main;
 }
+
+.slider--wrapper {
+  box-sizing: border-box;
+  padding: 0 50px;
+}
