--- a/src/assets/css/wild-west.scss
+++ b/src/assets/css/wild-west.scss
@@ -71,23 +71,24 @@
 
   &__icons {
     background: $gray-light;
-    padding-bottom: 20px;
+    padding-bottom: 35px;
     border-bottom: 10px solid $green-main;
+    &-item {
+      font-size: 50px;
+      font-family: 'Sigmar', sans-serif;
+      text-align: center;
+    }
+    .slider-item {
+      text-align: center;
+      img {
+        display: inline-block;
+      }
+    }
     .flex-container {
       display: flex;
       flex-flow: row wrap;
       justify-content: space-between;
       align-items: center;
-    }
-    &-item {
-      &:first-child {
-        width: 40%;
-        font-size: 50px;
-        font-family: 'Sigmar', sans-serif;
-        min-width: auto;
-      }
-      min-width: 200px;
-      width: 19%;
     }
   }
   &__characters {
@@ -96,7 +97,10 @@
       color: white;
     }
     .slick-prev:before, .slick-next:before {
-      font-size: 30px;
+      font-size: 50px;
+      position: relative;
+      bottom: 13px;
+      right: 15px;
     }
     .slick-center {
       background: rgba(0, 0, 0, 0.1);
@@ -108,8 +112,11 @@
     .slider-item {
       height: 400px;
       position: relative;
-      padding: 50px;
+      padding: 60px;
       box-sizing: border-box;
+      @media (max-width: 900px) {
+        padding: 20px;
+      }
       img {
         height: 100%;
         margin: auto;
