--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -4,7 +4,8 @@
 header {
   display: flex;
   font-family: 'Sigmar', sans-serif;
-  color: white; }
+  color: white;
+  background: #ffffff; }
   header .name {
     display: flex;
     width: 50%; }
@@ -14,7 +15,8 @@ header {
       header .name .name_and_prof .fullName {
         font-size: 50px; }
       header .name .name_and_prof .prof {
-        font-size: 30px; }
+        font-size: 30px;
+        color: #557789; }
   header ul {
     display: flex;
     justify-content: space-around;
@@ -25,7 +27,8 @@ header {
       padding: 4px;
       font-size: 26px;
       letter-spacing: 2px;
-      margin: 0 10px; }
+      margin: 0 10px;
+      color: #000; }
       header ul li:hover {
         border-bottom: 4px solid #6c8e66; }
       header ul li.selected {
