3d model added and slider arrow size fix, autoplay added

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -274,7 +274,6 @@ header {
       justify-content: space-between;
       align-items: center; }
   .wild-west__characters {
-    padding-bottom: 30px;
     background: #474747; }
     .wild-west__characters .slick-dots li button:before {
       color: white; }
@@ -306,6 +305,12 @@ header {
       font-family: 'Sigmar', sans-serif;
       color: #EEF6F2;
       padding: 20px 0; }
+
+.wild-west__model {
+  text-align: center; }
+
+.sketchfab-embed-wrapper {
+  padding-top: 20px; }
 
 .health-defender {
   border: solid #76a10f;
@@ -763,7 +768,19 @@ footer {
 
 .slider--wrapper {
   box-sizing: border-box;
-  padding: 0 50px; }
+  padding: 0 50px 30px; }
 
 .fullName {
   color: #1d1d1d; }
+
+.slick-prev:before, .slick-next:before {
+  font-size: 50px;
+  right: 13px;
+  position: relative;
+  bottom: 13px; }
+
+.slick-next {
+  right: -34px; }
+
+.slick-prev {
+  left: -37px; }
