--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -61,9 +61,22 @@ footer {
 
 .slider--wrapper {
   box-sizing: border-box;
-  padding: 0 50px;
+  padding: 0 50px 30px;
 }
 
 .fullName {
   color: #1d1d1d;
+}
+
+.slick-prev:before, .slick-next:before {
+  font-size: 50px;
+  right: 13px;
+  position: relative;
+  bottom: 13px;
+}
+.slick-next {
+  right: -34px;
+}
+.slick-prev {
+  left: -37px;
 }
