--- a/src/assets/css/wild-west.css
+++ b/src/assets/css/wild-west.css
@@ -9,30 +9,25 @@
     font-family: "Sigmar", sans-serif;
     padding: 20px 0;
     line-height: 80px; }
-  .wild-west__scenes-two {
-    background: #b8b8b8;
-    padding-top: 10px;
-    border-bottom: 10px solid #76a10f; }
-    .wild-west__scenes-two img {
-      width: 100%;
-      vertical-align: bottom; }
   .wild-west__scenes-one {
     background: #474747;
     padding-bottom: 10px; }
-    .wild-west__scenes-one img {
-      width: 49%;
-      height: auto; }
-    .wild-west__scenes-one .flex-wrap {
-      align-items: flex-end;
-      display: flex;
-      flex-flow: row wrap;
-      justify-content: space-between; }
+    .wild-west__scenes-one .slick-dots li button:before {
+      color: #ffffff; }
+    .wild-west__scenes-one .title {
+      font-size: 40px;
+      text-align: center;
+      color: #ffffff;
+      font-family: "Sigmar", sans-serif;
+      padding-bottom: 30px; }
   .wild-west__desc {
     color: #EEF6F2;
     font-size: 30px;
     font-family: 'Sigmar', sans-serif;
-    margin: 25px 0;
-    line-height: 35px; }
+    margin: 0 0 25px;
+    line-height: 35px;
+    padding: 20px 0 20px;
+    border-bottom: 10px solid #76a10f; }
   .wild-west__weapons .flex-container {
     display: flex;
     flex-flow: row wrap;
