--- a/src/assets/css/other.scss
+++ b/src/assets/css/other.scss
@@ -1,3 +1,9 @@
+.works__fantasy {
+  .slick-dots li button:before {
+    color: #ffffff;
+  }
+}
+
 .works__fantasy2 {
   background: $gray-light;
   text-align: center;
